--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -69,6 +69,21 @@
     "fontFamily": "インター"
   },
   "games": {
+    "shap10r": {
+      "id": "シャップ10r",
+      "title": "シェイプ10r",
+      "description": "オリジナルの Shape10r パズルゲーム",
+      "image": "/images/shap10r.svg",
+      "gameUrl": "/{lang}",
+      "type": "シングル",
+      "features": [
+        "オリジナル Shape10r ゲーム",
+        "クラシックなパズルの仕組み",
+        "複数のレベル",
+        "挑戦的なゲームプレイ"
+      ],
+      "mainFeature": "オリジナル Shape10r ゲーム"
+    },
     "double-shap10r": {
       "title": "ダブル シャープ10r",
       "description": "2 つの Shap10r パズルを同時に解いてチャレンジしましょう。この古典的なゲームの難解なバリエーションでは、共通の形と色を使用して、2 つの数字の組み合わせを同時に解きます。",
@@ -118,6 +133,110 @@
         "faq4": {
           "question": "利用できる異なるモードはありますか?",
           "answer": "通常の Shap10r と同様に、両方のボードでソートされた値を使用する通常モードまたはソートされていない値を使用するハード モードでプレイできます。"
+        }
+      }
+    },
+    "quad-shap10r": {
+      "title": "クワッド シャープ10r",
+      "description": "4 つの Shap10r パズルを同時に解いて究極のチャレンジに挑みましょう。共有された形と色のプールを使用して 4 つの独立した数字の組み合わせを解きながら、マルチタスクの技術を習得します。",
+      "shortDescription": "共有リソースによるクワッドパズルの解決",
+      "features": {
+        "feature1": {
+          "title": "クアッドゲームボード",
+          "description": "共有された図形のプールを使用して、4つの独立したShap10rパズルを同時に解きます。"
+        },
+        "feature2": {
+          "title": "高度な戦略",
+          "description": "4つのボード間でリソースを管理し、効率とスコアを最大化します"
+        },
+        "feature3": {
+          "title": "マルチタスクチャレンジ",
+          "description": "一度に複数のパズルを追跡して解く能力をテストします"
+        },
+        "feature4": {
+          "title": "競争スコアリング",
+          "description": "すべてのボードの列を完成させてポイントを獲得し、高得点を目指しましょう"
+        }
+      },
+      "howToPlay": {
+        "step1": "共有選択領域から図形と色を選択します",
+        "step2": "4つのボードすべてに戦略的にピースを配置します",
+        "step3": "各ボードの進行状況を監視し、効果的に動きに優先順位を付ける",
+        "step4": "制限時間内に4つのパズルをすべて完成させて勝利しましょう"
+      },
+      "seo": {
+        "title": "Quad Shap10r | 4 つのボードの数字パズル ゲーム",
+        "description": "Quad Shap10r は、形と色を共有する 4 つの同時パズル ボードを備えており、究極のパズル解決のための戦略的なマルチボード ゲームプレイを提供します。",
+        "keywords": "Quad Shap10r、クワッドパズル、数字ゲーム、ロジックゲーム、戦略ゲーム、形状マッチング、色マッチング"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Quad Shap10r は通常の Shap10r とどう違うのですか?",
+          "answer": "Quad Shap10r には、同じ形と色のプールを共有する 4 つのゲーム ボードがあり、すべてのパズルを同時に解くには高度な戦略的計画が必要です。"
+        },
+        "faq2": {
+          "question": "すべてのボードを一緒に完成させる必要がありますか?",
+          "answer": "はい、すべてのボードにわたって形状の選択を慎重に管理しながら、許可された試行回数内で 4 つのパズルすべてを解く必要があります。"
+        },
+        "faq3": {
+          "question": "Double Shap10rよりも難しいですか？",
+          "answer": "はい、共有リソースを持つ 4 つの委員会を管理することは、専門的なマルチタスク処理と戦略的思考を必要とする厳しい課題を生み出します。"
+        },
+        "faq4": {
+          "question": "利用できる異なるモードはありますか?",
+          "answer": "通常の Shap10r と同様に、4 つのボードすべてで、ソートされた値を使用する通常モード、またはソートされていない値を使用するハード モードでプレイできます。"
+        }
+      }
+    },
+    "octo-shap10r": {
+      "title": "オクト シャップ10r",
+      "description": "8 つのパズルを同時に解く究極の Shap10r チャレンジを体験してください。共有された形と色のプールを使用して複数の数字の組み合わせを解きながら、究極のマルチタスクの技術を習得してください。",
+      "shortDescription": "共有リソースによる Octo パズルの解決",
+      "features": {
+        "feature1": {
+          "title": "8つのゲームボード",
+          "description": "4x2 グリッドレイアウトで 8 つの独立した Shap10r パズルを同時に解きます"
+        },
+        "feature2": {
+          "title": "エキスパート戦略",
+          "description": "相互接続された8つのボードにわたる複雑なリソース管理をマスター"
+        },
+        "feature3": {
+          "title": "究極のチャレンジ",
+          "description": "8つのゲームを並行してプレイして、マルチタスク能力を限界まで高めましょう"
+        },
+        "feature4": {
+          "title": "高得点の可能性",
+          "description": "8つのボードすべてで列を完成させて高得点を獲得しましょう"
+        }
+      },
+      "howToPlay": {
+        "step1": "共有選択領域から図形と色を選択します",
+        "step2": "8つのボードすべてに戦略的にピースを配置します",
+        "step3": "各ボードの進行状況を監視し、動きを最適化します",
+        "step4": "与えられた試行回数内で8つのパズルをすべて完成させて勝利しましょう"
+      },
+      "seo": {
+        "title": "Octo Shap10r | 8 ボードの数字パズル ゲーム",
+        "description": "形と色を共有する 8 つの同時パズル ボードを備えた Octo Shap10r で究極のチャレンジに挑みましょう。最も緊迫したマルチボード ゲームプレイ体験です。",
+        "keywords": "Octo Shap10r、8 パズル、数字ゲーム、ロジック ゲーム、戦略ゲーム、形状マッチング、色マッチング"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Octo Shap10r は他のバリエーションとどう違うのですか?",
+          "answer": "Octo Shap10r は、4x2 グリッド レイアウトの 8 つのゲーム ボードを備えており、Shap10r シリーズで最も挑戦的なマルチタスク エクスペリエンスを提供します。"
+        },
+        "faq2": {
+          "question": "8 つのボードすべてを一緒に完成させる必要がありますか?",
+          "answer": "はい、許可された試行回数内で 8 つのパズルすべてを解く必要があり、専門的なリソース管理と戦略的計画が必要です。"
+        },
+        "faq3": {
+          "question": "推奨される画面サイズはどれですか?",
+          "answer": "レイアウトは小さい画面にも適応しますが、最適なエクスペリエンスを得るには大画面 (1920x1080 以上) が推奨されます。"
+        },
+        "faq4": {
+          "question": "これは最も難しいバージョンですか?",
+          "answer": "はい、Octo Shap10r は、8 つのゲームを同時にプレイして自分のスキルを極限まで高めたい熟練プレイヤー向けに設計されています。"
         }
       }
     }
