--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -69,6 +69,21 @@
     "fontFamily": "인터"
   },
   "games": {
+    "shap10r": {
+      "id": "샤프10r",
+      "title": "셰이프10r",
+      "description": "원래 Shape10r 퍼즐 게임",
+      "image": "/images/shap10r.svg",
+      "gameUrl": "/{언어}",
+      "type": "하나의",
+      "features": [
+        "오리지널 셰이프10r 게임",
+        "클래식 퍼즐 메커니즘",
+        "다중 레벨",
+        "도전적인 게임 플레이"
+      ],
+      "mainFeature": "오리지널 셰이프10r 게임"
+    },
     "double-shap10r": {
       "title": "더블 샤프10r",
       "description": "두 개의 동시 Shap10r 퍼즐로 도전하세요. 공유된 모양과 색상을 사용하여 이 고전 게임의 마인드 벤딩 변형에서 두 숫자 조합을 동시에 풀어보세요.",
@@ -118,6 +133,110 @@
         "faq4": {
           "question": "다양한 모드가 있나요?",
           "answer": "일반적인 Shap10r과 마찬가지로, 두 보드 모두에서 정렬된 값을 사용하는 일반 모드와 정렬되지 않은 값을 사용하는 하드 모드로 플레이할 수 있습니다."
+        }
+      }
+    },
+    "quad-shap10r": {
+      "title": "쿼드 샤프10r",
+      "description": "4개의 동시 Shap10r 퍼즐로 궁극의 도전에 도전하세요. 모양과 색상의 공유 풀을 사용하여 4개의 독립적인 숫자 조합을 풀면서 멀티태스킹의 기술을 마스터하세요.",
+      "shortDescription": "공유 리소스를 활용한 4개 퍼즐 풀기",
+      "features": {
+        "feature1": {
+          "title": "쿼드 게임 보드",
+          "description": "공유 모양 풀을 사용하여 4개의 독립적인 Shap10r 퍼즐을 동시에 풀어보세요."
+        },
+        "feature2": {
+          "title": "고급 전략",
+          "description": "효율성과 점수를 극대화하기 위해 4개 보드에서 리소스를 관리합니다."
+        },
+        "feature3": {
+          "title": "멀티태스킹 챌린지",
+          "description": "여러 퍼즐을 동시에 추적하고 풀 수 있는 능력을 테스트하세요"
+        },
+        "feature4": {
+          "title": "경쟁적인 점수",
+          "description": "모든 보드에서 행을 완료하면 포인트를 획득하고 높은 점수를 목표로 하세요."
+        }
+      },
+      "howToPlay": {
+        "step1": "공유 선택 영역에서 모양과 색상을 선택하세요",
+        "step2": "4개의 보드에 걸쳐 전략적으로 조각을 배치하세요",
+        "step3": "각 보드의 진행 상황을 모니터링하고 효과적으로 이동의 우선순위를 지정합니다.",
+        "step4": "허용된 시도 시간 내에 4개의 퍼즐을 모두 완료하면 승리합니다."
+      },
+      "seo": {
+        "title": "Quad Shap10r | 4보드 숫자 퍼즐 게임",
+        "description": "Quad Shap10r로 당신의 정신에 도전하세요. 모양과 색상을 공유하는 4개의 동시 퍼즐 보드가 특징입니다. 궁극적인 퍼즐 풀기를 위한 전략적 멀티보드 게임플레이.",
+        "keywords": "Quad Shap10r, 쿼드 퍼즐, 숫자 게임, 논리 게임, 전략 게임, 모양 매칭, 색상 매칭"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Quad Shap10r은 일반 Shap10r과 어떻게 다릅니까?",
+          "answer": "Quad Shap10r은 동일한 모양과 색상을 공유하는 4개의 게임 보드로 구성되어 있으며, 모든 퍼즐을 동시에 풀기 위해서는 고급 전략적 계획이 필요합니다."
+        },
+        "faq2": {
+          "question": "모든 보드를 함께 작성해야 합니까?",
+          "answer": "네, 허용된 시도 횟수 내에 4개의 퍼즐을 모두 풀어야 하며, 모든 보드에서 모양 선택을 신중하게 관리해야 합니다."
+        },
+        "faq3": {
+          "question": "Double Shap10r보다 더 어렵나요?",
+          "answer": "네, 공유 리소스를 사용하는 4개의 이사회를 관리하려면 전문적인 멀티태스킹과 전략적 사고가 필요한 엄청난 어려움이 있습니다."
+        },
+        "faq4": {
+          "question": "다양한 모드가 있나요?",
+          "answer": "일반적인 Shap10r과 마찬가지로, 4개의 보드에서 값이 정렬된 일반 모드와 값이 정렬되지 않은 하드 모드로 플레이할 수 있습니다."
+        }
+      }
+    },
+    "octo-shap10r": {
+      "title": "옥토 샤프10r",
+      "description": "8개의 동시 퍼즐로 궁극의 Shap10r 챌린지를 경험하세요. 모양과 색상의 공유 풀을 사용하여 여러 숫자 조합을 풀면서 극한의 멀티태스킹 기술을 마스터하세요.",
+      "shortDescription": "공유 리소스를 활용한 옥토 퍼즐 풀기",
+      "features": {
+        "feature1": {
+          "title": "8개의 게임 보드",
+          "description": "4x2 그리드 레이아웃에서 8개의 독립적인 Shap10r 퍼즐을 동시에 풀어보세요"
+        },
+        "feature2": {
+          "title": "전문가 전략",
+          "description": "8개의 상호 연결된 보드에서 복잡한 리소스 관리를 마스터합니다."
+        },
+        "feature3": {
+          "title": "궁극적인 도전",
+          "description": "8개의 병렬 게임으로 멀티태스킹 능력을 한계까지 끌어올리세요"
+        },
+        "feature4": {
+          "title": "높은 점수 가능성",
+          "description": "8개의 보드 모두에서 행을 완성하여 엄청난 점수를 얻으세요."
+        }
+      },
+      "howToPlay": {
+        "step1": "공유 선택 영역에서 모양과 색상을 선택하세요",
+        "step2": "8개의 보드 전체에 걸쳐 조각을 전략적으로 배치하세요",
+        "step3": "각 보드의 진행 상황을 모니터링하고 움직임을 최적화하세요",
+        "step4": "허용된 시도 시간 내에 8개의 퍼즐을 모두 완료하면 승리합니다."
+      },
+      "seo": {
+        "title": "Octo Shap10r | 8보드 숫자 퍼즐 게임",
+        "description": "Octo Shap10r로 궁극의 도전에 도전하세요. 모양과 색상을 공유하는 8개의 동시 퍼즐 보드가 특징입니다. 가장 강렬한 멀티보드 게임플레이 경험.",
+        "keywords": "Octo Shap10r, 8퍼즐, 숫자게임, 논리게임, 전략게임, 모양맞추기, 색상맞추기"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Octo Shap10r은 다른 모델과 어떻게 다릅니까?",
+          "answer": "Octo Shap10r은 4x2 그리드 레이아웃으로 8개의 게임 보드를 갖추고 있어 Shap10r 시리즈에서 가장 도전적인 멀티태스킹 경험을 제공합니다."
+        },
+        "faq2": {
+          "question": "8개의 보드를 모두 함께 완성해야 합니까?",
+          "answer": "네, 허용된 시도 시간 내에 8개의 퍼즐을 모두 풀어야 하며, 이를 위해서는 전문적인 자원 관리와 전략적 계획이 필요합니다."
+        },
+        "faq3": {
+          "question": "어떤 화면 크기가 권장되나요?",
+          "answer": "최상의 경험을 위해서는 대형 화면(1920x1080 이상)이 권장되지만, 레이아웃은 더 작은 화면에도 적응됩니다."
+        },
+        "faq4": {
+          "question": "이게 가장 어려운 버전인가요?",
+          "answer": "네, Octo Shap10r은 동시에 8개의 게임을 하며 자신의 기술을 최대한 발휘하고 싶은 고급 플레이어를 위해 설계되었습니다."
         }
       }
     }
