--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -69,6 +69,21 @@
     "fontFamily": "Интер"
   },
   "games": {
+    "shap10r": {
+      "id": "shap10r",
+      "title": "Форма10р",
+      "description": "Оригинальная игра-головоломка Shape10r",
+      "image": "/images/shap10r.svg",
+      "gameUrl": "/{язык}",
+      "type": "одинокий",
+      "features": [
+        "Оригинальная игра Shape10r",
+        "Классическая механика головоломки",
+        "Несколько уровней",
+        "Сложный игровой процесс"
+      ],
+      "mainFeature": "Оригинальная игра Shape10r"
+    },
     "double-shap10r": {
       "title": "Двойной Шейп10р",
       "description": "Испытайте себя с двумя одновременными головоломками Shap10r. Используйте общие формы и цвета, чтобы решить обе комбинации чисел одновременно в этом ошеломляющем варианте классической игры.",
@@ -118,6 +133,110 @@
         "faq4": {
           "question": "Доступны ли различные режимы?",
           "answer": "Как и в обычном Shap10r, вы можете играть в обычном режиме с отсортированными значениями или в сложном режиме с несортированными значениями на обеих досках."
+        }
+      }
+    },
+    "quad-shap10r": {
+      "title": "Квадратный Shap10r",
+      "description": "Примите вызов с четырьмя одновременными головоломками Shap10r. Освойте искусство многозадачности, решая четыре независимые комбинации чисел, используя общий пул форм и цветов.",
+      "shortDescription": "Решение головоломок Quad с использованием общих ресурсов",
+      "features": {
+        "feature1": {
+          "title": "Доски для игры в квадроциклы",
+          "description": "Решите четыре независимые головоломки Shap10r одновременно, используя общий набор фигур."
+        },
+        "feature2": {
+          "title": "Расширенная стратегия",
+          "description": "Управляйте ресурсами на четырех досках, чтобы максимизировать эффективность и результативность"
+        },
+        "feature3": {
+          "title": "Многозадачность",
+          "description": "Проверьте свою способность отслеживать и решать несколько головоломок одновременно."
+        },
+        "feature4": {
+          "title": "Конкурентный подсчет очков",
+          "description": "Зарабатывайте очки за завершение рядов на всех досках и стремитесь к высоким результатам."
+        }
+      },
+      "howToPlay": {
+        "step1": "Выберите формы и цвета из общей области выбора.",
+        "step2": "Размещайте фигуры стратегически на всех четырех досках.",
+        "step3": "Отслеживайте прогресс на каждой доске и эффективно расставляйте приоритеты",
+        "step4": "Решите все четыре головоломки за отведенное время, чтобы победить."
+      },
+      "seo": {
+        "title": "Quad Shap10r | Четырехугольная головоломка с числами",
+        "description": "Испытайте свой ум с Quad Shap10r, включающим четыре одновременные доски для головоломок, которые делятся формами и цветами. Стратегический многодосковый геймплей для окончательного решения головоломок.",
+        "keywords": "Quad Shap10r, головоломка с квадроциклами, игра с числами, логическая игра, стратегическая игра, сопоставление форм, сопоставление цветов"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Чем Quad Shap10r отличается от обычного Shap10r?",
+          "answer": "Quad Shap10r состоит из четырех игровых полей, которые используют одинаковый набор форм и цветов, требуя продвинутого стратегического планирования для одновременного решения всех головоломок."
+        },
+        "faq2": {
+          "question": "Нужно ли заполнять все доски одновременно?",
+          "answer": "Да, вам необходимо решить все четыре головоломки за отведенное время, внимательно выбирая фигуры на всех досках."
+        },
+        "faq3": {
+          "question": "Он сложнее, чем Double Shap10r?",
+          "answer": "Да, управление четырьмя советами директоров с общими ресурсами — это сложная задача, требующая экспертной многозадачности и стратегического мышления."
+        },
+        "faq4": {
+          "question": "Доступны ли различные режимы?",
+          "answer": "Как и в обычном Shap10r, вы можете играть в обычном режиме с отсортированными значениями или в сложном режиме с несортированными значениями на всех четырех досках."
+        }
+      }
+    },
+    "octo-shap10r": {
+      "title": "Окто Шап10р",
+      "description": "Испытайте сложнейшую задачу Shap10r с восемью одновременными головоломками. Освойте искусство экстремальной многозадачности, решая несколько числовых комбинаций, используя общий пул форм и цветов.",
+      "shortDescription": "Решение головоломок Octo с использованием общих ресурсов",
+      "features": {
+        "feature1": {
+          "title": "Восемь игровых досок",
+          "description": "Решите восемь независимых головоломок Shap10r одновременно в сетке 4x2."
+        },
+        "feature2": {
+          "title": "Экспертная стратегия",
+          "description": "Освойте комплексное управление ресурсами на восьми взаимосвязанных платах"
+        },
+        "feature3": {
+          "title": "Окончательный вызов",
+          "description": "Раскройте свой потенциал многозадачности с помощью восьми параллельных игр"
+        },
+        "feature4": {
+          "title": "Высокий потенциальный результат",
+          "description": "Достигните огромных результатов, заполнив ряды на всех восьми досках"
+        }
+      },
+      "howToPlay": {
+        "step1": "Выберите формы и цвета из общей области выбора.",
+        "step2": "Размещайте фигуры стратегически на всех восьми досках.",
+        "step3": "Отслеживайте прогресс на каждой доске и оптимизируйте свои ходы",
+        "step4": "Решите все восемь головоломок за отведенное время, чтобы победить."
+      },
+      "seo": {
+        "title": "Octo Shap10r | Головоломка с восьмью числами",
+        "description": "Примите окончательное испытание с Octo Shap10r, включающим восемь одновременных досок-головоломок, разделяющих формы и цвета. Самый интенсивный игровой опыт с несколькими досками.",
+        "keywords": "Octo Shap10r, головоломка с восьмеркой, числовая игра, логическая игра, стратегическая игра, сопоставление форм, сопоставление цветов"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Чем Octo Shap10r отличается от других вариантов?",
+          "answer": "Octo Shap10r оснащен восемью игровыми полями в сетке 4x2, предлагая самые сложные возможности многозадачности в серии Shap10r."
+        },
+        "faq2": {
+          "question": "Нужно ли заполнять все восемь досок одновременно?",
+          "answer": "Да, вам необходимо решить все восемь головоломок за отведенное время, что потребует экспертного управления ресурсами и стратегического планирования."
+        },
+        "faq3": {
+          "question": "Какой размер экрана рекомендуется?",
+          "answer": "Для оптимальной работы рекомендуется большой экран (1920x1080 или выше), хотя макет адаптируется и к экранам меньшего размера."
+        },
+        "faq4": {
+          "question": "Это самая сложная версия?",
+          "answer": "Да, Octo Shap10r предназначен для опытных игроков, которые хотят довести свои навыки до абсолютного предела, играя одновременно в восьми играх."
         }
       }
     }
