--- a/src/locales/zh-tw.json
+++ b/src/locales/zh-tw.json
@@ -69,6 +69,21 @@
     "fontFamily": "國際米蘭"
   },
   "games": {
+    "shap10r": {
+      "id": "形狀10r",
+      "title": "形狀10r",
+      "description": "原創 Shape10r 益智遊戲",
+      "image": "/images/shap10r.svg",
+      "gameUrl": "/{語言}",
+      "type": "單身的",
+      "features": [
+        "原創 Shape10r 遊戲",
+        "經典解謎機制",
+        "多層次",
+        "具有挑戰性的遊戲玩法"
+      ],
+      "mainFeature": "原創 Shape10r 遊戲"
+    },
     "double-shap10r": {
       "title": "雙形10r",
       "description": "透過兩個同時進行的 Shap10r 謎題來挑戰自己。在這款令人費解的經典遊戲變體中，使用共享的形狀和顏色同時解決兩個數字組合。",
@@ -118,6 +133,110 @@
         "faq4": {
           "question": "有不同的模式可用嗎？",
           "answer": "與常規 Shap10r 一樣，您可以在正常模式下玩已排序值的遊戲，也可以在困難模式下玩未排序值的遊戲。"
+        }
+      }
+    },
+    "quad-shap10r": {
+      "title": "四邊形10r",
+      "description": "接受四個同時進行的 Shap10r 謎題的終極挑戰。使用共享的形狀和顏色池解決四個獨立的數字組合，掌握多任務處理的藝術。",
+      "shortDescription": "使用共享資源解決四重謎題",
+      "features": {
+        "feature1": {
+          "title": "四人遊戲板",
+          "description": "使用共享形狀池同時解決四個獨立的 Shap10r 謎題"
+        },
+        "feature2": {
+          "title": "進階策略",
+          "description": "管理四個委員會的資源，以最大限度地提高效率和分數"
+        },
+        "feature3": {
+          "title": "多工挑戰",
+          "description": "測試您同時追蹤和解決多個謎題的能力"
+        },
+        "feature4": {
+          "title": "競技評分",
+          "description": "完成所有棋盤上的行即可賺取積分並爭取高分"
+        }
+      },
+      "howToPlay": {
+        "step1": "從共享選擇區域中選擇形狀和顏色",
+        "step2": "將棋子策略性地放置在所有四個棋盤上",
+        "step3": "監控每個板上的進度並有效地確定行動的優先順序",
+        "step4": "在允許的獲勝次數內完成所有四個謎題"
+      },
+      "seo": {
+        "title": "四邊形 Shap10r |四板數位益智遊戲",
+        "description": "使用 Quad Shap10r 挑戰您的思維，它具有四個共享形狀和顏色的同步拼圖板。策略性多棋盤遊戲，終極解謎。",
+        "keywords": "Quad Shap10r、四元拼圖、數字遊戲、邏輯遊戲、策略遊戲、形狀匹配、顏色匹配"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Quad Shap10r 與普通 Shap10r 有何不同？",
+          "answer": "Quad Shap10r 有四個遊戲板，它們共享相同的形狀和顏色，需要先進的策略規劃來同時解決所有謎題。"
+        },
+        "faq2": {
+          "question": "所有的板子都需要一起完成嗎？",
+          "answer": "是的，您必須在允許的嘗試範圍內解決所有四個謎題，並仔細管理所有棋盤上的形狀選擇。"
+        },
+        "faq3": {
+          "question": "是不是比Double Shap10r更難？",
+          "answer": "是的，管理具有共享資源的四個董事會會帶來巨大的挑戰，需要專家的多工處理和策略思維。"
+        },
+        "faq4": {
+          "question": "有不同的模式可用嗎？",
+          "answer": "與常規 Shap10r 一樣，您可以在所有四個棋盤上以具有排序值的正常模式或具有未排序值的困難模式進行遊戲。"
+        }
+      }
+    },
+    "octo-shap10r": {
+      "title": "奧克托 Shap10r",
+      "description": "體驗八個同時謎題的終極 Shap10r 挑戰。使用共享的形狀和顏色池解決多個數字組合，掌握極限多工的藝術。",
+      "shortDescription": "使用共享資源解決 Octo 謎題",
+      "features": {
+        "feature1": {
+          "title": "八個遊戲板",
+          "description": "在 4x2 網格佈局中同時解決八個獨立的 Shap10r 謎題"
+        },
+        "feature2": {
+          "title": "專家策略",
+          "description": "掌握八個互連板的複雜資源管理"
+        },
+        "feature3": {
+          "title": "終極挑戰",
+          "description": "透過八個並行遊戲將您的多任務能力發揮到極限"
+        },
+        "feature4": {
+          "title": "高分潛力",
+          "description": "通過完成所有八個棋盤上的行來獲得高分"
+        }
+      },
+      "howToPlay": {
+        "step1": "從共享選擇區域中選擇形狀和顏色",
+        "step2": "將棋子策略性地放置在所有八個棋盤上",
+        "step3": "監控每個棋盤的進度並優化您的動作",
+        "step4": "在允許的獲勝嘗試範圍內完成所有八個謎題"
+      },
+      "seo": {
+        "title": "奧克托 Shap10r |八盤數位益智遊戲",
+        "description": "使用 Octo Shap10r 迎接終極挑戰，該遊戲具有八個同時共享形狀和顏色的拼圖板。最激烈的多棋盤遊戲體驗。",
+        "keywords": "Octo Shap10r，八字謎題，數字遊戲，邏輯遊戲，策略遊戲，形狀匹配，顏色匹配"
+      },
+      "faqs": {
+        "faq1": {
+          "question": "Octo Shap10r 與其他變體有何不同？",
+          "answer": "Octo Shap10r 具有 4x2 網格佈局的八個遊戲板，提供 Shap10r 系列中最具挑戰性的多工體驗。"
+        },
+        "faq2": {
+          "question": "所有八塊板都需要一起完成嗎？",
+          "answer": "是的，您必須在允許的嘗試範圍內解決所有八個謎題，這需要專家的資源管理和策略規劃。"
+        },
+        "faq3": {
+          "question": "建議使用什麼螢幕尺寸？",
+          "answer": "儘管佈局適應較小的螢幕，但建議使用大螢幕（1920x1080 或更高）以獲得最佳體驗。"
+        },
+        "faq4": {
+          "question": "這是最具挑戰性的版本嗎？",
+          "answer": "是的，Octo Shap10r 專為想要透過八個同時遊戲將自己的技能推向絕對極限的專家玩家而設計。"
         }
       }
     }
